===================================================================================================
0.10.3 (PHP7) version ...
===================================================================================================
- FIX: bug47 fix ported to PHP7 branch (https://github.com/alexeyrybak/blitz/issues/47)

===================================================================================================
0.10.2 (PHP7) version 7 dec 2015. ✡ Happy hanukkah! ✡
===================================================================================================
- ADD: include scope finally merged, having {{ include('filename.tpl', user=$_.user) }} 
  you can do {{ $user.name }} in the included templates. Thanks to Nicolas Van Eenaeme 
  and Yuri Nasretdinov.

===================================================================================================
0.10.1 (PHP7) version 14 oct 2015
===================================================================================================
- CHANGE: this is the first PHP7 port (based on 0.9.1) with all the tests passed as expected. 
  Many thanks to Anton "tony2001" Dovgal.

===================================================================================================
0.9.1 version 25 june 2015
===================================================================================================
- FIX: added predefined constant $_i - loop identifier, same as $_num, but starts with 0. 
- FIX: "native" if, also fixes some logical errors (thanks to Nicolas Van Eenaeme) 
- FIX: arginfo added and a couple of other minor fixes (thanks to Anton "tony2001" Dovgal)
- FIX: zephir integration fix (plain blitz::__construct declaration)

===================================================================================================
0.8.18 version 5 mar 2015
===================================================================================================
- FIX: "not" operand (!) works incorrectly with strings
